# RankForge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MASTER_PLAN.md  README.md  club_match_csv_template.csv  docker-compose.prod.yml  docker-compose.yml  output.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  frontend-redesign.md  matchmaking-algorithm.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BulkAddPlayers.tsx  GamePicker.tsx  ui.tsx
frontend/src/lib/: GameContext.tsx  api.ts  features.ts  format.ts  outcome.ts  types.ts
frontend/src/pages/: GamesPage.tsx  LeaderboardPage.tsx  MatchesPage.tsx  MatchmakingPage.tsx  PlayerProfilePage.tsx  RecordMatchPage.tsx  SessionPage.tsx
integrations/discord-bot/: README.md  bot.py
src/alembic/: env.py
src/alembic/versions/: 20251220_add_is_anonymous_to_players.py  20251220_add_timestamps_indexes_versioning.py  20251222_add_dupr_upload_tracking.py  20260703_add_played_at_index.py  20260704_add_game_rating_config.py  20260704_add_seasons.py  67205d1019b0_create_initial_database_tables.py
src/rankforge/: exceptions.py  features.py  main.py
src/rankforge/api/: game.py  match.py  matchmaking.py  player.py
src/rankforge/db/: models.py  session.py
src/rankforge/middleware/: security.py
src/rankforge/rating/: __init__.py  dummy_engine.py  glicko2_engine.py
src/rankforge/schemas/: game.py  match.py  matchmaking.py  player_stats.py  prediction.py
src/rankforge/services/: match_service.py  matchmaking_service.py  prediction_service.py  recalculation_service.py  season_service.py  stats_service.py
src/rankforge/tools/: __init__.py  tune.py
tests/: conftest.py  test_api.py  test_api_pagination.py  test_chemistry.py  test_db_models.py  test_features.py  test_glicko2_edge_cases.py  test_margin_weight.py  test_match_update.py  test_match_weight.py  test_matchmaking.py  test_matchmaking_fairness.py  test_prediction.py  test_rating_config.py  test_rating_engine.py  test_rd_growth.py  test_seasons.py  test_security.py  test_services.py  test_transaction_rollback.py  test_tune_tool.py
