# ===============================
# === Project Metadata ==========
# ===============================
[project]
name = "rankforge"
version = "0.1.0"
description = "A modern, full-stack rating and matchmaking system for competitive games for any number of players and any number of teams."
authors = [{ name = "Kshitij Vaidya", email = "kmvaidya1@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "python-dotenv",
    "asyncpg",
    "psycopg2-binary",
    "aiosqlite",
]

# ===============================
# === Developer Tools ===========
# ===============================
[project.optional-dependencies]
dev = [
    # ruff/mypy are pinned to match .pre-commit-config.yaml revs — CI installs
    # from here, and an unpinned major bump breaks it (mypy 2.x drops support
    # for the sqlalchemy mypy plugin).
    "ruff==0.13.1",      # For linting and formatting
    "mypy==1.18.2",      # For static type checking
    "pre-commit",        # For managing pre-commit hooks
    "pytest",            # For testing
    "pytest-asyncio",    # For testing asyncio code
    "httpx",             # For testing FastAPI endpoints
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, and isort rules.
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
# Explicit so all ruff versions agree (src-layout autodetection varies).
known-first-party = ["rankforge"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "src.alembic.*"
disable_error_code = "attr-defined"
